Removed header link for Facebook page

--- a/themes/antares/layout/_partial/header.ejs
+++ b/themes/antares/layout/_partial/header.ejs
@@ -3,7 +3,7 @@
     <%- image_tag('images/logo-short.png', {alt: "Antares Logo", class:'cover__logo'}) %>
     <h2 class="cover__title">Antares Blog</h2>
     <div class="expand"></div>
-    <a class="cover__link" href="https://facebook.com/antaresprogramming" target="_blank"><%- image_tag('images/facebook.svg', {alt: "Go to Facebook"}) %></a>
+    <!--a class="cover__link" href="https://facebook.com/antaresprogramming" target="_blank"><%- image_tag('images/facebook.svg', {alt: "Go to Facebook"}) %></a-->
   </section>
 </header>
 <nav class="nav" aria-label="Primary Navigation">
