Added dark mode support

--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -1,7 +1,7 @@
 <aside lang="en" class="sidebar">
   
   <section class="sidebar-wrapper" aria-label="Table of Contents">
-    <details>
+    <details class="will-scroll">
       <summary>
         <h4 class="sidebar__title" id="sidebar-title">In this post...</h4>
       </summary>
