--- a/themes/antares/layout/_partial/header.ejs
+++ b/themes/antares/layout/_partial/header.ejs
@@ -21,6 +21,8 @@
   </a>
   <a href="#search" title="Search for something" class="nav-item search js-close-search">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 34.97999954223633 34.97999954223633"><path d="M25 22h-1.59l-.55-.55C24.82 19.18 26 16.23 26 13c0-7.18-5.82-13-13-13S0 5.82 0 13s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V25l10 9.98L34.98 32 25 22zm-12 0a9 9 0 1 1 .001-18.001A9 9 0 0 1 13 22z"/></svg>
-    <span class="nav-item--desktop">Search</span>
   </a>
+  <button onclick="toggleDarkMode()" title="Toggle dark mode" class="nav-item dark-mode" aria-label="Toggle dark mode for visual readers">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.628990173339844 46.789207458496094"><path d="M23.747 46.781C10.632 46.781 0 36.149 0 23.034 0 11.92 7.636 2.588 17.948 0a23.671 23.671 0 0 0-6.866 16.701c0 13.116 10.632 23.747 23.747 23.747a23.79 23.79 0 0 0 5.8-.713 23.674 23.674 0 0 1-16.882 7.046z"/></svg>
+  </button>
 </nav>
