Announced release of dark mode

--- a/themes/antares/layout/_partial/article-excerpt.ejs
+++ b/themes/antares/layout/_partial/article-excerpt.ejs
@@ -37,9 +37,11 @@
         </div>
     <% } %>
     <!-- Content -->
+    <% if(with_excerpt) { %>
     <section class="post__excerpt">
         <%- item.excerpt || item.content %>
     </section>
+    <% } %>
     
 <% if (item.tags && item.tags.length){ %>
     <%
