--- a/themes/antares/layout/_partial/sidebar.ejs
+++ b/themes/antares/layout/_partial/sidebar.ejs
@@ -9,10 +9,10 @@
     </details>
   </section>
 
-  <section class="sidebar-wrapper feedback-sidebar" aria-label="Table of Contents">
+  <section class="sidebar-wrapper feedback-sidebar" aria-labelledby="feedback-sidebar-title" id="feedback-sidebar">
     <details>
       <summary>
-        <h4 class="sidebar__title" id="sidebar-title">Kumusta ang post na ito?</h4>
+        <h4 class="sidebar__title" id="feedback-sidebar-title">Kumusta ang post na ito?</h4>
       </summary>
       <p>Pakisuyong mag-iwan ng feedback.</p>
       <form class="feedback-form" id="feedback-form">
