--- a/themes/antares/layout/index.ejs
+++ b/themes/antares/layout/index.ejs
@@ -4,13 +4,38 @@
             <h2>Featured Article</h2>
         </header>
         <% 
+            let featuredArticleHasBeenFound = false;
             page.posts.each(function(item){ 
+                if(featuredArticleHasBeenFound) return;
+
                 let articleIsFeatured = item.is_featured;
+                featuredArticleHasBeenFound = articleIsFeatured;
                 if(articleIsFeatured) {
         %>
             <%- partial('_partial/article-featured', {item: item, is_featured: articleIsFeatured}) %>
-        <% }}); %>
-        
+        <% 
+                }
+            }); 
+        %>
+
+        <details>
+            <summary>
+                <h3>Past Featured Articles</h3>
+            </summary>
+
+            <section class="section card-grid">
+                <% 
+                    page.posts.each(function(item){ 
+                        let articleIsFeatured = item.is_featured;
+                        if(articleIsFeatured) {
+                %>
+                    <%- partial('_partial/article-excerpt', {item: item, is_featured: false, with_excerpt: false}) %>
+                <% 
+                        }
+                    }); 
+                %>
+            </section>
+        </details>        
     </section>
     
     <section class="section">
@@ -20,7 +45,7 @@
         <% 
             page.posts.each(function(item){ 
         %>
-            <%- partial('_partial/article-excerpt', {item: item, is_featured: false}) %>
+            <%- partial('_partial/article-excerpt', {item: item, is_featured: false, with_excerpt: true}) %>
         <% }); %>
         
     </section>
@@ -30,10 +55,3 @@
         <%- partial('_widget/tags.ejs') %>
     </section>
 </main>
-
-<!--div class="posts-container">
-    < page.posts.each(function(item){ %>
-        <- partial('_partial/article-excerpt', {item: item}) %>
-    < }); %>
-</div>
-<%- partial('_partial/pagination') %>-->
