--- a/themes/antares/layout/tag.ejs
+++ b/themes/antares/layout/tag.ejs
@@ -11,4 +11,9 @@
             <% }) %>
         </div>
     </section>
+
+    <section class="section section--categories">
+        <%- partial('_widget/categories.ejs') %>
+        <%- partial('_widget/tags.ejs') %>
+    </section>
 </main>
