--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -144,7 +144,7 @@ dt:not([class]) {
 }
 
 dt:not([class]),
-dt:not([class])>* {
+dt:not([class]) > * {
   font-weight: 900;
 }
 
@@ -154,12 +154,14 @@ dd:not([class]) {
   margin: 0;
 }
 
-dt:not([class]), dd:not([class]) {
-	background-color: var(--definition);
+dt:not([class]),
+dd:not([class]) {
+  background-color: var(--definition);
 }
 
-dt:not([class]), dd:not([class]) {
-	background-color: var(--definition);
+dt:not([class]),
+dd:not([class]) {
+  background-color: var(--definition);
 }
 
 strong {
@@ -244,14 +246,14 @@ br {
 }
 
 .side-callout {
-	margin: 1rem auto;
-	max-width: 50ch;
-	border: 1px solid var(--accent);
-	background-color: var(--card-bg);
-	padding: 1ch;
-	clear: both;
-	font-family: var(--sans-serif), sans-serif;
-	border-left: 5px solid var(--accent);
+  margin: 1rem auto;
+  max-width: 50ch;
+  border: 1px solid var(--accent);
+  background-color: var(--card-bg);
+  padding: 1ch;
+  clear: both;
+  font-family: var(--sans-serif), sans-serif;
+  border-left: 5px solid var(--accent);
 }
 
 .is-post {
@@ -363,10 +365,10 @@ br {
 }
 
 .nav-item.search {
-	border: none;
-	transition: box-shadow 300ms;
-	background-color: var(--cover-bg--hover);
-	flex: none;
+  border: none;
+  transition: box-shadow 300ms;
+  background-color: var(--cover-bg--hover);
+  flex: none;
 }
 
 .nav-item.search:focus,
@@ -381,7 +383,7 @@ br {
 }
 
 .dark .nav-item.dark-mode svg {
-  fill: var(--accent)
+  fill: var(--accent);
 }
 
 /* index.ejs */
@@ -548,8 +550,12 @@ br {
 }
 
 @keyframes focus_blink {
-  from { box-shadow: 0 0 0 5px var(--primary); }
-  to   { box-shadow: 0 0 0 10px var(--primary); }
+  from {
+    box-shadow: 0 0 0 5px var(--primary);
+  }
+  to {
+    box-shadow: 0 0 0 10px var(--primary);
+  }
 }
 
 .blog-tags-container .tag {
@@ -655,19 +661,6 @@ a[target="_blank"]::after {
   display: block;
 }
 
-.img-wrapper figcaption {
-  display: block;
-  margin: auto;
-  text-align: center;
-  font-family: var(--sans-serif), sans-serif;
-  font-weight: normal;
-  max-width: 20ch;
-}
-
-/* .img-wrapper.img-wrapper--illustration {
-  margin: 2rem;
-} */
-
 .img-wrapper--illustration {
   width: 100%;
   max-width: unset;
@@ -745,17 +738,17 @@ a[target="_blank"]::after {
 }
 
 .highlight figcaption {
-	position: absolute;
-	background-color: var(--card-bg);
-	border: 1px solid var(--card-bg-dark);
-	border-radius: 4px;
-	border-top-left-radius: 0;
-	border-top-right-radius: 0;
-	height: auto;
-	color: var(--text);
-	padding: 0 1ch;
-	font-family: var(--sans-serif), sans-serif;
-	font-weight: normal;
+  position: absolute;
+  background-color: var(--card-bg);
+  border: 1px solid var(--card-bg-dark);
+  border-radius: 4px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  height: auto;
+  color: var(--text);
+  padding: 0 1ch;
+  font-family: var(--sans-serif), sans-serif;
+  font-weight: normal;
 }
 
 .gutter {
@@ -820,8 +813,8 @@ hr {
 }
 
 .page {
-	padding: 10px;
-	background-color: var(--body-bg);
+  padding: 10px;
+  background-color: var(--body-bg);
 }
 
 .main.page {
@@ -838,15 +831,15 @@ hr {
 }
 
 .card {
-	max-width: 400px;
-	width: 90%;
-	margin: 0.5rem auto;
-	overflow: hidden;
-	background-color: var(--card-bg);
-	display: block;
-	border-radius: 4px;
-	border: 1px solid var(--card-bg-dark);
-	font-family: var(--sans-serif), sans-serif;
+  max-width: 400px;
+  width: 90%;
+  margin: 0.5rem auto;
+  overflow: hidden;
+  background-color: var(--card-bg);
+  display: block;
+  border-radius: 4px;
+  border: 1px solid var(--card-bg-dark);
+  font-family: var(--sans-serif), sans-serif;
 }
 
 .card img {
@@ -1147,17 +1140,17 @@ body:not(.noscript) #search:target {
 }
 
 .post__header {
-	grid-column: 2 / span 3;
-	grid-row: 2/3;
-	z-index: 2;
-	color: var(--text--dark);
-	background-color: var(--primary-lighter);
-	border: 1px solid var(--primary);
-	box-shadow: var(--elevation-2);
-	border-radius: 5px;
-	padding: 1ch;
-	justify-self: end;
-	transition: transform 300ms, box-shadow 300ms;
+  grid-column: 2 / span 3;
+  grid-row: 2/3;
+  z-index: 2;
+  color: var(--text--dark);
+  background-color: var(--primary-lighter);
+  border: 1px solid var(--primary);
+  box-shadow: var(--elevation-2);
+  border-radius: 5px;
+  padding: 1ch;
+  justify-self: end;
+  transition: transform 300ms, box-shadow 300ms;
 }
 
 .post__header:focus-within,
@@ -1283,18 +1276,18 @@ li {
 }
 
 .input-field label {
-	grid-column: 1/2;
-	grid-row: 1/2;
-	background: var(--card-bg);
-	justify-self: start;
-	width: auto;
-	max-width: 75%;
-	font-size: 1rem;
-	padding: 5px 10px;
-	color: var(--primary-dark);
-	font-weight: bold;
-	margin-left: 1ch;
-	margin-top: -2rem;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  background: var(--card-bg);
+  justify-self: start;
+  width: auto;
+  max-width: 75%;
+  font-size: 1rem;
+  padding: 5px 10px;
+  color: var(--primary-dark);
+  font-weight: bold;
+  margin-left: 1ch;
+  margin-top: -2rem;
 }
 
 .input-field textarea:invalid,
@@ -1365,10 +1358,10 @@ li {
 }
 
 .section--categories {
-	background-color: var(--card-bg);
-	border-top: 1px solid var(--card-bg-dark);
-	max-width: none;
-	padding-bottom: 2rem;
+  background-color: var(--card-bg);
+  border-top: 1px solid var(--card-bg-dark);
+  max-width: none;
+  padding-bottom: 2rem;
 }
 
 .section--categories .widget-wrap {
@@ -1490,20 +1483,20 @@ li {
 }
 
 .example-container--fixable {
-	margin-top: 2rem;
-	padding-top: 3rem;
+  margin-top: 2rem;
+  padding-top: 3rem;
 }
 
 .example-container--fixable::before {
-	content: "I-double-click para palakihin";
-	position: absolute;
-	top: 0;
-	background-color: var(--card-bg);
-	padding: 4px;
-	border: 1px solid var(--card-bg-dark);
-	left: 0;
-	right: 0;
-	font-family: var(--sans-serif);
+  content: "I-double-click para palakihin";
+  position: absolute;
+  top: 0;
+  background-color: var(--card-bg);
+  padding: 4px;
+  border: 1px solid var(--card-bg-dark);
+  left: 0;
+  right: 0;
+  font-family: var(--sans-serif);
 }
 
 .example-container--fixable.fixed {
@@ -1654,14 +1647,14 @@ li {
   }
 
   .sidebar-wrapper {
-    margin-bottom: 2rem;
+    margin-bottom: 5px;
   }
 
   .sidebar-wrapper details {
     max-height: calc(100vh - 4rem);
     height: 100%;
   }
-  
+
   details.will-scroll {
     overflow: auto;
   }
