Added past featured articles in the home page

--- a/themes/antares/layout/index.ejs
+++ b/themes/antares/layout/index.ejs
@@ -18,7 +18,7 @@
             }); 
         %>
 
-        <details>
+        <details class="other-featured-articles">
             <summary>
                 <h3>Past Featured Articles</h3>
             </summary>
