--- a/themes/antares/source/css/index.css
+++ b/themes/antares/source/css/index.css
@@ -1517,6 +1517,24 @@ li {
   content: "I-double-click para paliitin";
 }
 
+.other-featured-articles summary {
+  /* list-style-type: '+'; */
+  position: sticky;
+  top: 0;
+  background-color: var(--body-bg);
+  margin-left: 2rem;
+}
+
+.other-featured-articles[open] summary {
+  /* list-style-type: "-"; */
+}
+
+.other-featured-articles summary > * {
+  display: inline;
+}
+
+/* MEDQUERIES_START */
+
 @media only screen and (min-width: 768px) {
   .side-note {
     margin: 1ch;
