Added Links of the Week featurette

--- a/themes/antares/layout/index.ejs
+++ b/themes/antares/layout/index.ejs
@@ -53,5 +53,6 @@
     <section class="section section--categories">
         <%- partial('_widget/categories.ejs') %>
         <%- partial('_widget/tags.ejs') %>
+        <%- partial('_widget/links-of-the-week.ejs') %>
     </section>
 </main>
