Renamed Links of the Week featurette into From the Interwebz I figured I can't possibly do that link curation every week, so I'll just do it in irregular intervals.

--- a/themes/antares/layout/_widget/links-of-the-week.ejs
+++ b/themes/antares/layout/_widget/links-of-the-week.ejs
@@ -1,6 +1,6 @@
 <% if(site.data.links_of_the_week.length > 0) {%>
 <article class="widget-wrap">
-    <h4 class="widget-title">Links of the Week</h4>
+    <h4 class="widget-title">From the Interwebz</h4>
     <section class="widget links-of-the-week">
         <ul class="link-set">
         <% 
