--- a/themes/antares/layout/_partial/head.ejs
+++ b/themes/antares/layout/_partial/head.ejs
@@ -83,13 +83,14 @@ function renderLinkPaths(pathArray = []) {
   <%- links.join("\n") %>
   <%- scripts.join("\n") %>
 
-  <!-- <link
+  <link
     href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900"
     rel="stylesheet"
   />
   
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&amp;subset=latin-ext" rel="stylesheet">  -->
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Eczar:400,700&amp;subset=latin-ext" rel="stylesheet">
   <!--
     HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
   -->
@@ -98,7 +99,7 @@ function renderLinkPaths(pathArray = []) {
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131462553-1"></script> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131462553-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
