--- a/themes/antares-2/layout/page.ejs
+++ b/themes/antares-2/layout/page.ejs
@@ -1,10 +1,3 @@
-<main class="main page">
-    <h1 class="post__title">
-        <a href="<%- config.root %><%- page.path %>">
-            <%- page.title || page.link %>
-        </a>
-    </h1>
-    <section class="post post--full">
-        <%- page.content %>
-    </section>
-</main>
+<div class="page">
+    <%- page.content %>
+</div>
