Enabled dark mode switch

--- a/themes/antares-2/layout/layout.ejs
+++ b/themes/antares-2/layout/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="<%- page.lang %>">
 <%- partial('_partial/head') %>
-<body class="dark">
+<body>
     <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
     <%- body %>
     <%- partial('_partial/footer', null, {cache: !config.relative_link}) %>
