--- a/themes/antares-2/layout/_partial/header.ejs
+++ b/themes/antares-2/layout/_partial/header.ejs
@@ -25,6 +25,6 @@
     <li class="nav-item nav-active"><a class="nav" href="<%- config.root + theme.menu.Home %>">Home</a></li>
     <li class="nav-item"><a class="nav" href="<%- config.root + theme.menu.Archives %>">Archives</a></li>
     <li class="nav-item"><a class="nav" href="#search">Search</a></li>
-    <li class="nav-item pull-right"><a role="button" tabindex="0" class="nav">Enable dark mode</a></li>
+    <li class="nav-item pull-right"><button onclick="toggleDarkMode()" role="button" tabindex="0" class="nav dark-mode">Dark mode</button></li>
   </ul>
 </nav>
