Made dark mode the default

--- a/themes/antares-2/layout/layout.ejs
+++ b/themes/antares-2/layout/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="<%- page.lang %>">
+<html lang="<%- page.lang %>" class="dark">
 <%- partial('_partial/head') %>
 <body>
     <%- partial('_partial/header', null, {cache: !config.relative_link}) %>
