--- a/themes/antares-2/source/css/style.css
+++ b/themes/antares-2/source/css/style.css
@@ -397,7 +397,7 @@ em {
     grid-row: 1/3;
     object-fit: cover;
     object-position: center;
-    filter: saturate(0);
+    filter: saturate(0) brightness(.3);
     transition: filter 1s, transform 1s;
 }
 
@@ -416,7 +416,7 @@ em {
 }
 
 .post__wrapper:hover + .cover-display {
-    filter: none;
+    filter: saturate(1) brightness(.73);
     transform: scale(1.05);
     transition: filter 1s, transform 1s;
 }
